<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/blue_light"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="46sp"
        android:textColor="@color/blue_dark"
        android:textStyle="bold"/>


    <!-- Slider de imágenes -->
    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:flipInterval="2000"
        android:autoStart="true"
        android:layout_marginVertical="38dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true">

        <!-- Primera Imagen -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_description"
            android:src="@drawable/img_futbol_1"
            android:scaleType="centerCrop" />

        <!-- Segunda Imagen -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_description"
            android:src="@drawable/img_futbol_2"
            android:scaleType="centerCrop" />
    </ViewFlipper>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIngresar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text="@string/btn_ingresar"
        android:textSize="20sp"
        android:backgroundTint="@color/blue_dark"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inf_creator"
        android:layout_marginTop="36dp"/>
</LinearLayout>