<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".fragmentos.LigasFragment">

    <!-- Encabezado del fragmento -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/frag_ligas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Buscador -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/etPais"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_search"
            android:hint="@string/search_by_country"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue_dark"
            android:paddingHorizontal="28dp"
            android:text="@string/search"
            android:textSize="14sp" />

    </LinearLayout>


    <!-- RecyclerView para mostrar las ligas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLigas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>